Tutorial3発展課題ViewPager2実装完了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <activity android:name=".layout.Tutorial2Activity"/>
         <activity android:name=".adapter.Tutorial3Activity"/>
+        <activity android:name=".adapter.Tutorial3ExActivity"/>
 
     </application>
 
