--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.axiaworks.tutorial">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".TutorialApplication"
         android:allowBackup="true"
@@ -9,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -21,6 +24,7 @@
         <activity android:name=".layout.Tutorial2Activity"/>
         <activity android:name=".adapter.Tutorial3Activity"/>
         <activity android:name=".adapter.Tutorial3ExActivity"/>
+        <activity android:name=".library.Tutorial4Activity"/>
 
     </application>
 
