Tutorial4発展課題の実装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".adapter.Tutorial3Activity"/>
         <activity android:name=".adapter.Tutorial3ExActivity"/>
         <activity android:name=".library.Tutorial4Activity"/>
+        <activity android:name=".library.Tutorial4ExActivity"/>
 
     </application>
 
