--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.0'
-
+    implementation 'com.google.zxing:core:3.3.3'
 }
